tests/typing/bad/testfile-and1-1.scala
class A { def m() { var x: Boolean = 1 && true } }
object Main { def main(args: Array[String]) { } }
